# simg

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: basic_3d.rs  breakout.rs  game_template.rs  sandbox.rs  triangle.rs  type_and_shoot.rs
examples/assets/: postfx.frag
examples/assets/breakout/: postfx.frag
examples/wasm/: index.html  src
shaders/: primitive.frag  primitive.vert  screen_rect.vert
src/: audio_player.rs  camera.rs  color.rs  common.rs  emscripten.rs  font.rs  geometry.rs  glyph_atlas.rs  input.rs  lib.rs  mesh.rs  program.rs  renderer.rs  shapes.rs  vertex_buffer.rs
tools/: build.py
