[package]
name = "simg"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
sdl2 = {version = "0.35.0", features = ["mixer"]}
glow = "0.12.2"
image = "0.24.6"
fontdue = "0.7.3"
obj-rs = "0.7"
nalgebra = "0.32.2"
rand = "0.8.5"
enum-iterator = "1.4.1"

[build-dependencies]
gl_generator = "0.14.0"
